--- a/authentication/authentication.html
+++ b/authentication/authentication.html
@@ -4,11 +4,32 @@
     <meta charset="utf-8">
     <meta name="viewport">
     <title>Authentication</title>
-    <link rel="stylesheet" href="./authentication-styles.css">
+    <link rel="stylesheet" href="./authentication-styles-2.css">
 </header>
 
 <body>
-    <div class="card">
+        <div class="card">
+            <div class="form">
+                <div class="form-header">
+                    <h2 class="title">Create new account</h2>
+                    <form class="form-input">
+                        <input type="text" class="email" name="email" placeholder="Email" required>
+                        <input type="text" class="password" name="password" placeholder="Password" required>
+                    </form>
+                    <input type="button" class="create-account-btn" value="Create account">
+                    <p>Already have an account? <a href="">Log in</a></p>
+                </div>
+
+
+                <div class="form-footer">
+                    <div class="divider"></div>
+                    <p>By signing up you agree to the <a href="">Terms of Use</a> and <a href="">Privacy Policy</a></p>
+                </div>
+            </div>
+
+            <img src="./photo1.webp" class="image"/>
+        </div>
+    <!-- <div class="card">
         <div class="form">
             <h2>Create new account</h2>
             <input type="text" class="email" name="email" placeholder="Email" required>
@@ -21,8 +42,7 @@
             </div>
         </div>
         <img src="./photo1.webp" />
-    </div>
-
+    </div> -->
 </body>
 
 <footer>
