chore: fix authentication page

--- a/authentication/authentication.html
+++ b/authentication/authentication.html
@@ -32,9 +32,9 @@
     <!-- <div class="card">
         <div class="form">
             <h2>Create new account</h2>
-            <input type="text" class="email" name="email" placeholder="Email" required>
-            <input type="text" class="password" name="password" placeholder="Password" required>
-            <input type="button" class="create-account-btn" value="Create account">
+            <input type="email" class="email" name="email" placeholder="Email" required>
+            <input type="password" class="password" name="password" placeholder="Password" required>
+            <input type="submit" class="create-account-btn" value="Create account">
             <p>Already have an account? <a href="">Log in</a></p>
             <div class="form-footer">
                 <div class="divider"></div>
