feat:AG-09/finish-footer

--- a/shared-components/header.html
+++ b/shared-components/header.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport">
     <title>Header</title>
     <link rel="stylesheet" href="./header-styles.css">
-</header>
+</head>
 
 <body>
     <div class="header">
@@ -27,10 +28,6 @@
             <a href="#">Login</a>
             <a href="#">Cart</a>
         </div>
-    </div>
-
-    <div style="width: 100%; height: 150vh">
-        dropdown-content
     </div>
 </body>
 
